# jamaica-dev-kit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERSHIP.md  PUBLICATION_STATUS.md  README.md  commits.MD  docker-compose.yml  eslint.config.mjs  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json  vercel.json
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish-python.yml  publish.yml
apps/addressing-api/: Dockerfile  pyproject.toml
apps/addressing-api/app/: config.py  geocoder.py  main.py  models.py  parish_lookup.py  plus_codes.py
apps/addressing-web/: Dockerfile  package.json
apps/ai-assistant-api/: Dockerfile  pyproject.toml
apps/ai-assistant-api/app/: config.py  data_loader.py  main.py  models.py  rag.py  sessions.py
apps/ai-assistant-web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.mts
apps/docs/cli/: index.md
apps/docs/examples/: common-patterns.md  express-middleware.md  full-stack.md  react-forms.md
apps/docs/guide/: getting-started.md  installation.md  quick-start.md
apps/docs/playground/: address.md  currency.md  fees.md  holidays.md  index.md  parishes.md  payroll.md  phone.md  trn.md
apps/docs/public/: llms-full.txt  llms.txt
apps/docs/sectors/: civic-tech.md  diaspora.md  ecommerce.md  education.md  fintech.md  government.md  health.md  hr-payroll.md  logistics.md
examples/checkout-demo/: next.config.ts  package.json  tailwind.config.ts
examples/gov-services-portal/: next.config.ts  package.json
examples/parish-dashboard/: next.config.ts  package.json
examples/payroll-calculator/: next.config.ts  package.json
tests/e2e/: docs.test.ts  package.json  playwright.config.ts
toolkit/jamaica-addresses/python/: pyproject.toml
toolkit/jamaica-addresses/python/jamaica_addresses/: __init__.py
toolkit/jamaica-addresses/python/tests/: test_addresses.py
toolkit/jamaica-addresses/shared-tests/: vectors.json
toolkit/jamaica-addresses/ts/: package.json
toolkit/jamaica-banks/python/: pyproject.toml
toolkit/jamaica-banks/shared-tests/: vectors.json
toolkit/jamaica-banks/ts/: package.json
toolkit/jamaica-boj/ts/: package.json
toolkit/jamaica-cli/ts/: package.json
toolkit/jamaica-constants/python/: pyproject.toml
toolkit/jamaica-constants/python/jamaica_constants/: __init__.py
toolkit/jamaica-constants/python/tests/: test_constants.py
toolkit/jamaica-constants/shared-tests/: vectors.json
toolkit/jamaica-constants/ts/: package.json
toolkit/jamaica-constituencies/python/: pyproject.toml
toolkit/jamaica-constituencies/python/jamaica_constituencies/: __init__.py
toolkit/jamaica-constituencies/shared-tests/: vectors.json
toolkit/jamaica-constituencies/ts/: package.json
toolkit/jamaica-currency/python/: pyproject.toml
toolkit/jamaica-currency/python/jamaica_currency/: __init__.py
toolkit/jamaica-currency/python/tests/: test_currency.py
toolkit/jamaica-currency/shared-tests/: vectors.json
toolkit/jamaica-currency/ts/: package.json
toolkit/jamaica-emergency/python/: pyproject.toml
toolkit/jamaica-emergency/python/jamaica_emergency/: __init__.py
toolkit/jamaica-emergency/shared-tests/: vectors.json
toolkit/jamaica-emergency/ts/: package.json
toolkit/jamaica-express/ts/: package.json
toolkit/jamaica-gov-fees/python/: pyproject.toml
toolkit/jamaica-gov-fees/python/jamaica_gov_fees/: __init__.py
toolkit/jamaica-gov-fees/python/tests/: test_fees.py
toolkit/jamaica-gov-fees/shared-tests/: vectors.json
toolkit/jamaica-gov-fees/ts/: package.json
toolkit/jamaica-health/python/: pyproject.toml
toolkit/jamaica-health/shared-tests/: vectors.json
toolkit/jamaica-health/ts/: package.json
toolkit/jamaica-holidays/python/: pyproject.toml
toolkit/jamaica-holidays/python/jamaica_holidays/: __init__.py
toolkit/jamaica-holidays/python/tests/: test_holidays.py
toolkit/jamaica-holidays/shared-tests/: vectors.json
toolkit/jamaica-holidays/ts/: package.json
toolkit/jamaica-open-data/ts/: package.json  tsconfig.json
toolkit/jamaica-parishes/python/: pyproject.toml
toolkit/jamaica-parishes/python/jamaica_parishes/: __init__.py
toolkit/jamaica-parishes/python/tests/: test_parishes.py
toolkit/jamaica-parishes/shared-tests/: vectors.json
toolkit/jamaica-parishes/ts/: package.json
toolkit/jamaica-phone/python/: pyproject.toml
toolkit/jamaica-phone/python/jamaica_phone/: __init__.py
toolkit/jamaica-phone/python/tests/: test_phone.py
toolkit/jamaica-phone/shared-tests/: vectors.json
toolkit/jamaica-phone/ts/: package.json  tsconfig.json
toolkit/jamaica-places/python/: pyproject.toml
toolkit/jamaica-places/python/jamaica_places/: __init__.py
toolkit/jamaica-places/shared-tests/: vectors.json
toolkit/jamaica-places/ts/: package.json
toolkit/jamaica-react/ts/: package.json  tsconfig.json
toolkit/jamaica-schools/python/: pyproject.toml
toolkit/jamaica-schools/python/jamaica_schools/: __init__.py
toolkit/jamaica-schools/shared-tests/: vectors.json
toolkit/jamaica-schools/ts/: package.json
toolkit/jamaica-tax/python/: pyproject.toml
toolkit/jamaica-tax/python/jamaica_tax/: __init__.py
toolkit/jamaica-tax/shared-tests/: vectors.json
toolkit/jamaica-tax/ts/: package.json
toolkit/jamaica-transport/python/: pyproject.toml
toolkit/jamaica-transport/python/jamaica_transport/: __init__.py
toolkit/jamaica-transport/shared-tests/: vectors.json
toolkit/jamaica-transport/ts/: package.json  tsconfig.json
toolkit/jamaica-trn/python/: pyproject.toml
toolkit/jamaica-trn/python/jamaica_trn/: __init__.py
toolkit/jamaica-trn/python/tests/: test_trn.py
toolkit/jamaica-trn/shared-tests/: vectors.json
toolkit/jamaica-trn/ts/: package.json
toolkit/jamaica-zod/ts/: package.json
toolkit/jamaica/python/: pyproject.toml
toolkit/jamaica/python/jamaica/: __init__.py
(+123 files in other folders)
