[project]
name = "jamaica-digital"
version = "0.1.0"
description = "Jamaica Digital Transformation Platform"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
  "toolkit/jamaica-trn/python",
  "toolkit/jamaica-parishes/python",
  "toolkit/jamaica-phone/python",
  "toolkit/jamaica-currency/python",
  "toolkit/jamaica-gov-fees/python",
  "toolkit/jamaica-addresses/python",
  "toolkit/jamaica-constants/python",
  "toolkit/jamaica-holidays/python",
  "toolkit/jamaica/python",
  "toolkit/jamaica-banks/python",
  "toolkit/jamaica-constituencies/python",
  "toolkit/jamaica-emergency/python",
  "toolkit/jamaica-health/python",
  "toolkit/jamaica-places/python",
  "toolkit/jamaica-schools/python",
  "toolkit/jamaica-tax/python",
  "toolkit/jamaica-transport/python",
  "apps/ai-assistant-api",
  "apps/addressing-api",
  "data/scripts",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["toolkit", "apps"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
