[project]
name = "addressing-api"
version = "0.1.0"
description = "Digital Addressing System API for Jamaica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "openlocationcode>=1.0.1",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
