[project]
name = "ai-assistant-api"
version = "0.1.0"
description = "AI Government Assistant API for Jamaica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-chroma>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "chromadb>=0.6.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
