[project]
name = "jamaica-constants"
version = "0.1.0"
description = "Jamaica country constants — codes, timezone, symbols, and national data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jamaica Digital", email = "oss@jamaica.digital"}]
keywords = ["jamaica", "constants", "country-codes", "timezone", "iso-3166"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://jamaica.digital"
Documentation = "https://jamaica.digital/packages/constants"
Repository = "https://github.com/jamaica-digital/jamaica"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
