[project]
name = "jamaica-holidays"
version = "0.1.0"
description = "Jamaica public holidays, business day calculations, and working day utilities"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jamaica Digital", email = "oss@jamaica.digital"}]
keywords = ["jamaica", "holidays", "public-holidays", "business-days", "calendar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://itsanderz.github.io/jamaica-dev-kit/"
Documentation = "https://itsanderz.github.io/jamaica-dev-kit/"
Repository = "https://github.com/itsanderz/jamaica-dev-kit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
