[project]
name = "jamaica-tax"
version = "0.1.0"
description = "Jamaica tax calculations — income tax, NIS, NHT, Education Tax, payroll"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jamaica Digital", email = "oss@jamaica.digital"}]
keywords = ["jamaica", "tax", "income-tax", "payroll", "nis", "nht"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://jamaica.digital"
Documentation = "https://jamaica.digital/packages/tax"
Repository = "https://github.com/jamaica-digital/jamaica"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
